--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>School Management System</title>
 </head>
 <body>
-    
+    <h1 style="margin-top: 5rem;"> Please use the console to access the school object</h1>
     <script src="script.js"> </script>
 </body>
 </html>
