--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>School Management System</title>
 </head>
 <body>
-    <h1 style="margin-top: 5rem; margin: auto; text-align: center;"> Please use the console to access the school object</h1>
+    <h1 style="margin-top: 5rem; margin: auto; text-align: center;"> Please type "school" in the console to see and use the school object</h1>
     <script src="script.js"> </script>
 </body>
 </html>
